--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "N5Vhr4_vECld"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
         "id": "ptoQwAGEDQnl",
         "outputId": "41001c5f-c020-46c9-b5ca-84bb72d6e291"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,17 +93,13 @@
         "from keras.models import Sequential\n",
         "from keras.layers.embeddings import Embedding\n",
         "\n",
-        "from keras.callbacks import Callback\n",
-        "from keras.callbacks import EarlyStopping, ModelCheckpoint, LearningRateScheduler,CSVLogger\n",
-        "from sklearn.metrics import roc_auc_score, roc_curve\n",
-        "\n",
-        "from numpy.random import seed  \n",
-        "tf.random.set_seed(2)"
+        "from keras.callbacks import Callback, ModelCheckpoint, CSVLogger\n",
+        "from sklearn.metrics import roc_auc_score, roc_curve"
       ],
       "metadata": {
         "id": "OeOYrHW9Bxs_"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +113,7 @@
       "metadata": {
         "id": "db4KNc_2Ixyu"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +125,7 @@
       "metadata": {
         "id": "pwcjgZd9I6AD"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +142,7 @@
       "metadata": {
         "id": "fNMyJgcsI8AU"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +157,7 @@
       "metadata": {
         "id": "pX78imOBI9l8"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +195,7 @@
       "metadata": {
         "id": "hTMVKvfRrQ9x"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,9 +207,6 @@
         "\n",
         "        self.interval = interval\n",
         "        self.X_val, self.y_val = validation_data\n",
-        "        # self.score\n",
-        "        # self.false_positive_rate\n",
-        "        # self.true_positive_rate\n",
         "\n",
         "    def on_epoch_end(self, epoch, logs={}):\n",
         "        if epoch % self.interval == 0:\n",
@@ -222,21 +215,10 @@
         "            self.false_positive_rate, self.true_positive_rate, _ = roc_curve(self.y_val, y_pred)\n",
         "            print(\"\\n ROC-AUC - epoch: {:d} - score: {:.6f}\".format(epoch+1, self.score))\n",
         "            \n",
-        "    def print_curve(self):\n",
-        "        # plt.plot(self.false_positive_rate, self.true_positive_rate, marker='.', label='Logistic')\n",
-        "        # # axis labels\n",
-        "        # plt.xlabel('False Positive Rate')\n",
-        "        # plt.ylabel('True Positive Rate')\n",
-        "        # # show the legend\n",
-        "        # plt.legend()\n",
-        "        # # show the plot\n",
-        "        # plt.show()\n",
-        "        ###########\n",
-        "        \n",
+        "    def print_curve(self):        \n",
         "        plt.figure()\n",
         "        lw = 2\n",
-        "        plt.plot(self.false_positive_rate,self.true_positive_rate,color=\"darkorange\",lw=lw,label=\"ROC curve (area = %0.2f)\" % self.score,\n",
-        "        )\n",
+        "        plt.plot(self.false_positive_rate,self.true_positive_rate,color=\"darkorange\",lw=lw,label=\"ROC curve (area = %0.2f)\" % self.score)\n",
         "        plt.plot([0, 1], [0, 1], color=\"navy\", lw=lw, linestyle=\"--\")\n",
         "        plt.xlim([0.0, 1.0])\n",
         "        plt.ylim([0.0, 1.05])\n",
@@ -250,7 +232,7 @@
       "metadata": {
         "id": "DLBaKxGhrbRU"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +263,7 @@
       "metadata": {
         "id": "xf_v4U5DDfU8"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,7 +289,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +328,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -407,7 +389,7 @@
       "metadata": {
         "id": "yBGbbGdfL7ps"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +403,7 @@
       "metadata": {
         "id": "bPL3sYgZ1h7j"
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +421,7 @@
       "metadata": {
         "id": "1x4MvEYPdC7q"
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -468,7 +450,7 @@
       "metadata": {
         "id": "wKH2mHM5r8_6"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,32 +465,20 @@
         "    model = create_cnn(VOCAB_SIZE, EMBEDDING_DIMENSION, MAX_TEXT_SIZE)\n",
         "    model.summary()\n",
         "    # model.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False), optimizer=optimizer, metrics=['accuracy'])\n",
-        "    # model.compile(loss=tf.keras.losses.BinaryCrossentropy(), optimizer=optimizer, metrics= tf.keras.metrics.AUC(\n",
-        "    # num_thresholds=200,\n",
-        "    # curve=\"ROC\",\n",
-        "    # summation_method=\"interpolation\",\n",
-        "    # name=None,\n",
-        "    # dtype=None,\n",
-        "    # thresholds=None,\n",
-        "    # multi_label=False,\n",
-        "    # num_labels=None,\n",
-        "    # label_weights=None,\n",
-        "    # from_logits=False))\n",
         "    model.compile(loss=tf.keras.losses.BinaryCrossentropy(), optimizer=optimizer, metrics=['accuracy'])        \n",
         "    \n",
         "    ra_val = RocAucEvaluation(validation_data=(x_test, y_test), interval = 1)\n",
-        "    early_stop = EarlyStopping(monitor = \"val_loss\", mode = \"min\", patience = 1, restore_best_weights=False)\n",
         "    csv_logger = CSVLogger('log.csv', append=False, separator=';')                                                                                        \n",
         "    \n",
-        "    history = model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, validation_split = validation_and_test_size, verbose=2, use_multiprocessing=True,  callbacks = [ra_val,early_stop,csv_logger])\n",
+        "    history = model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, validation_split = validation_and_test_size, verbose=2, use_multiprocessing=True,  callbacks = [ra_val,csv_logger])\n",
         "    scores = model.evaluate(x_test, y_test, verbose=1)\n",
         "    \n",
-        "    return history, model, x_test, y_test, ra_val"
+        "    return history, model, x_test, y_test, ra_val\n"
       ],
       "metadata": {
         "id": "wYnrq-34uZX5"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -524,7 +494,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,7 +595,7 @@
       "metadata": {
         "id": "75yZp3uxd4oK"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +612,7 @@
           "height": 868
         }
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +673,7 @@
           "height": 520
         }
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +949,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1020,7 +990,7 @@
         "                              )\n",
         "plt.show()"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1049,7 +1019,7 @@
           "height": 754
         }
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
