Uma prova Legal de que eu subi

--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "N5Vhr4_vECld"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
         "id": "ptoQwAGEDQnl",
         "outputId": "8bd7c65d-bf12-45d4-eb9b-d173d08b1c13"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "OeOYrHW9Bxs_"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "db4KNc_2Ixyu"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "pwcjgZd9I6AD"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "fNMyJgcsI8AU"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
       "metadata": {
         "id": "pX78imOBI9l8"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "DLBaKxGhrbRU"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
           "height": 175
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +450,7 @@
       "metadata": {
         "id": "xf_v4U5DDfU8"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -557,6 +557,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "* Otmizadores : 1 de cada 'família'   (Nadam, RMSProp, SGD, Ftrl)\n",
+        "* Bactch size :  32 e 64\n",
+        "* val e test size : .2 e .33 \n",
+        "* learning rate : '0.0001' e '0.001' e '0.0005'\n",
+        "* Dropout Rate: 0, 0.1, 0.2\n",
+        "* Numero de camadas convolucionais 1 e 2\n",
+        "* Numero de filtros em cada camada 10 , 32 , 64"
+      ],
+      "metadata": {
+        "id": "YpFI5Ut5EvAu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# parametros:\n",
@@ -576,7 +591,7 @@
       "metadata": {
         "id": "yBGbbGdfL7ps"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +605,7 @@
       "metadata": {
         "id": "bPL3sYgZ1h7j"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +623,7 @@
       "metadata": {
         "id": "1x4MvEYPdC7q"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +652,7 @@
       "metadata": {
         "id": "wKH2mHM5r8_6"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -664,7 +679,7 @@
       "metadata": {
         "id": "wYnrq-34uZX5"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +695,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,7 +779,7 @@
       "metadata": {
         "id": "FR-idj87D4-N"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -813,7 +828,7 @@
           "height": 206
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1033,7 +1048,7 @@
       "metadata": {
         "id": "nP3enYmss2v9"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1045,7 +1060,7 @@
       "metadata": {
         "id": "y519ohA8u9jW"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     }
   ]
