Tunning Força bruta

--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -574,16 +574,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# parametros:\n",
-        "BATCH_SIZE = 64\n",
+        "# parametros tunning:\n",
+        "BATCH_SIZE = [32, 64]\n",
+        "LEARN_RATE = [0.0001, 0.001]\n",
+        "OTMIZADORES = ['Nadam', 'RMSProp', 'SGD', 'Ftrl']\n",
+        "DROPOUT = [0.1, 0.2, 0.3]\n",
+        "\n",
+        "# parametros estaticos:\n",
         "EPOCHS = 10\n",
-        "VAL_AND_TST_SIZE = 0.2\n",
-        "LEARN_RATE = 0.0001\n",
-        "# ******\n",
-        "BETA_1 = 0.09\n",
-        "BETA_2 = 0.0999\n",
-        "EPSILON = 1e-07\n",
-        "# *****\n",
+        "VAL_AND_TST_SIZE = 0.2 # Fazer na mão\n",
         "EMBEDDING_DIMENSION = 300  \n",
         "MAX_TEXT_SIZE = max_text_length \n",
         "VOCAB_SIZE = text_vocab_size"
@@ -597,10 +596,18 @@
     {
       "cell_type": "code",
       "source": [
-        "def optimize (learning_rate, beta_1, beta_2, epsilon):\n",
+        "def optimize (optimize, learning_rate):\n",
+        "  if optimize == 'Nadam':\n",
+        "    return Nadam(learning_rate=learning_rate, name=\"Nadam\")\n",
         "  \n",
-        "  # return Nadam(learning_rate=learning_rate, beta_1=beta_1, beta_2=beta_2, epsilon=epsilon, name=\"Nadam\")\n",
-        "  return RMSprop(learning_rate=learning_rate,rho=0.9,momentum=0.0,epsilon=epsilon,centered=True,name=\"RMSprop\")"
+        "  if optimize == 'RMSProp':\n",
+        "    return RMSprop(learning_rate=learning_rate, name=\"RMSprop\")\n",
+        "  \n",
+        "  if optimize == 'SGD':\n",
+        "    return SGD(learning_rate=learning_rate, name=\"SGD\")\n",
+        "  \n",
+        "  if optimize == 'Ftrl':\n",
+        "    return Ftrl(learning_rate=learning_rate, name=\"Ftrl\")"
       ],
       "metadata": {
         "id": "bPL3sYgZ1h7j"
@@ -611,25 +618,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# #optimizer = Adadelta(learning_rate=0.001, rho=0.95, epsilon=1e-07, name=\"Adadelta\") \n",
-        "# #optimizer = SGD(learning_rate=0.01, momentum=0.0, nesterov=True, name=\"SGD\")\n",
-        "# #optimizer = RMSprop(learning_rate=0.001,rho=0.9,momentum=0.0,epsilon=1e-07,centered=True,name=\"RMSprop\")\n",
-        "# #optimizer = Adam(learning_rate=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-07, amsgrad=True, name=\"Adam\")\n",
-        "# #optimizer = Adagrad(learning_rate=0.001, initial_accumulator_value=0.1, epsilon=1e-07, name=\"Adagrad\")\n",
-        "# #optimizer = Adamax(learning_rate=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-07, name=\"Adamax\")\n",
-        "# #optimizer = Nadam(learning_rate=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-07, name=\"Nadam\") # 96% Embedding Treinado /\n",
-        "# #optimizer = Ftrl(learning_rate=0.001, learning_rate_power=-0.5, initial_accumulator_value=0.1, l1_regularization_strength=0.1, l2_regularization_strength=0.1, l2_shrinkage_regularization_strength=0.001, beta=0.0001, name=\"Ftrl\")"
-      ],
-      "metadata": {
-        "id": "1x4MvEYPdC7q"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def create_cnn (vocab_size, embedding_dimen, max_text_size ):\n",
+        "def create_cnn (vocab_size, embedding_dimen, max_text_size, dropout_rate ):\n",
         "\n",
         "  modelo = keras.Sequential([\n",
         "    keras.layers.Embedding(VOCAB_SIZE, EMBEDDING_DIMENSION, input_length=max_text_size),\n",
@@ -639,10 +628,11 @@
         "                            # embeddings_initializer=keras.initializers.Constant(MATRIZ_CBOW_300_BASE_2),\n",
         "                            # input_length=max_text_size,\n",
         "                            # trainable=True),                         \n",
-        "    keras.layers.Conv1D(10,3, activation=\"relu\"),\n",
+        "    keras.layers.Conv1D(max_text_size, 3, activation=\"relu\"),\n",
+        "    keras.layers.Conv1D(max_text_size*2, 3, activation=\"relu\"),\n",
         "    keras.layers.Flatten(input_shape=(max_text_size,)),\n",
         "    keras.layers.Dense(max_text_size, activation='relu'),\n",
-        "    keras.layers.Dropout(0.1),\n",
+        "    keras.layers.Dropout(dropout_rate),\n",
         "    keras.layers.Dense(1, activation='sigmoid')\n",
         "    ])\n",
         "  \n",
@@ -658,20 +648,24 @@
     {
       "cell_type": "code",
       "source": [
-        "def train_model(input_data, output_label, embedding_dimen, batch_size, epochs, validation_and_test_size):\n",
+        "def train_model(input_data, output_label, embedding_dimen, batch_size, epochs, validation_and_test_size, learning_rate, optimizer, dropout_rate):\n",
         "    \n",
         "    x_train, x_test, y_train, y_test = train_test_split(input_data, output_label, test_size=validation_and_test_size, random_state=42)\n",
         "\n",
-        "    optimizer = optimize(LEARN_RATE, BETA_1, BETA_2, EPSILON)\n",
+        "    opt = optimize(optimizer, learning_rate)\n",
         "    \n",
         "    model = create_cnn(VOCAB_SIZE, EMBEDDING_DIMENSION, MAX_TEXT_SIZE)\n",
-        "    model.summary()\n",
-        "    model.compile(loss=tf.keras.losses.BinaryCrossentropy(), optimizer=optimizer, metrics=['accuracy'])        \n",
+        "\n",
+        "    # model.summary()\n",
+        "\n",
+        "    model.compile(loss=tf.keras.losses.BinaryCrossentropy(), optimizer=opt, metrics=['accuracy'])        \n",
         "    \n",
         "    ra_val = RocAucEvaluation(validation_data=(x_test, y_test), interval = 1)\n",
+        "    \n",
         "    csv_logger = CSVLogger('log.csv', append=False, separator=';')                                                                                       \n",
         "    \n",
         "    history = model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, validation_split = validation_and_test_size, verbose=2, use_multiprocessing=True,  callbacks = [ra_val, csv_logger])\n",
+        "    \n",
         "    scores = model.evaluate(x_test, y_test, verbose=1)\n",
         "    \n",
         "    return history, model, x_test, y_test, ra_val, scores, csv_logger\n"
@@ -686,95 +680,104 @@
       "cell_type": "code",
       "source": [
         "# plot dos gráficos\n",
-        "history, model1, x_test, y_test, ra_val, scores, csv_logger = train_model(input_data, output_label, EMBEDDING_DIMENSION, BATCH_SIZE, EPOCHS, VAL_AND_TST_SIZE)"
+        "for BS in BATCH_SIZE:\n",
+        "  for LR in LEARN_RATE:\n",
+        "    for OT in OTMIZADORES:\n",
+        "      for DO in DROPOUT:\n",
+        "        \n",
+        "        history, model1, x_test, y_test, ra_val, scores, csv_logger = train_model(input_data, output_label, EMBEDDING_DIMENSION, BS, EPOCHS, VAL_AND_TST_SIZE, LR, OT, DO)\n",
+        "       \n",
+        "        #\n",
+        "        y_prob = model1.predict(x_test) \n",
+        "        y_labelpred = y_prob.round()\n",
+        "        y_labeltrue=y_test\n",
+        "        \n",
+        "        # Parâmetros\n",
+        "        NOME_REDE = REDE_CNN\n",
+        "        NOME_BASE = BASE_2\n",
+        "        NOME_FUNCAO = FUNCAO_ATV_SIGMOID\n",
+        "        NOME_OTIMIZADOR = OT\n",
+        "\n",
+        "        train_resume = json.dumps(pd.read_csv('log.csv',sep=';').to_dict()) \n",
+        "\n",
+        "        roc_curve =  json.dumps({\n",
+        "            \"false_positive_rate\": list(ra_val.false_positive_rate),\n",
+        "            \"true_positive_rate\": list(ra_val.true_positive_rate),\n",
+        "            \"score\": ra_val.score\n",
+        "        })\n",
+        "\n",
+        "        confusion = confusion_matrix(y_labeltrue, y_labelpred)\n",
+        "        confusion_dict = json.dumps({\n",
+        "            \"00\": int(confusion[0][0]),\n",
+        "            \"01\": int(confusion[0][1]),\n",
+        "            \"10\": int(confusion[1][0]),\n",
+        "            \"11\": int(confusion[1][1])\n",
+        "        })\n",
+        "\n",
+        "        # Salvando resultado do modelo\n",
+        "        registro_resultado = {resultados.columns[0]: NOME_REDE, \n",
+        "                              resultados.columns[1]: NOME_BASE, \n",
+        "                              resultados.columns[2]: NOME_FUNCAO, \n",
+        "                              resultados.columns[3]: NOME_OTIMIZADOR, \n",
+        "                              resultados.columns[4]: scores[1],\n",
+        "                              resultados.columns[5]: roc_curve,\n",
+        "                              resultados.columns[6]: train_resume,\n",
+        "                              resultados.columns[7]: confusion_dict}\n",
+        "\n",
+        "        resultados = resultados.append(registro_resultado, ignore_index=True)"
       ],
       "metadata": {
-        "id": "9YLL1kZTDzUG",
-        "outputId": "c4f80749-c8b5-4370-fedb-fcd6181e7a30",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "9YLL1kZTDzUG"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"sequential_2\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " embedding_2 (Embedding)     (None, 55, 300)           5712900   \n",
-            "                                                                 \n",
-            " conv1d_2 (Conv1D)           (None, 53, 10)            9010      \n",
-            "                                                                 \n",
-            " flatten_2 (Flatten)         (None, 530)               0         \n",
-            "                                                                 \n",
-            " dense_4 (Dense)             (None, 55)                29205     \n",
-            "                                                                 \n",
-            " dropout_2 (Dropout)         (None, 55)                0         \n",
-            "                                                                 \n",
-            " dense_5 (Dense)             (None, 1)                 56        \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 5,751,171\n",
-            "Trainable params: 5,751,171\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n",
-            "Epoch 1/10\n",
-            "\n",
-            " ROC-AUC - epoch: 1 - score: 0.666061\n",
-            "106/106 - 2s - loss: 0.6784 - accuracy: 0.5890 - val_loss: 0.6655 - val_accuracy: 0.6158 - 2s/epoch - 16ms/step\n",
-            "Epoch 2/10\n",
-            "\n",
-            " ROC-AUC - epoch: 2 - score: 0.697155\n",
-            "106/106 - 1s - loss: 0.6486 - accuracy: 0.6254 - val_loss: 0.6418 - val_accuracy: 0.6383 - 714ms/epoch - 7ms/step\n",
-            "Epoch 3/10\n",
-            "\n",
-            " ROC-AUC - epoch: 3 - score: 0.769890\n",
-            "106/106 - 1s - loss: 0.6025 - accuracy: 0.6795 - val_loss: 0.5918 - val_accuracy: 0.6992 - 819ms/epoch - 8ms/step\n",
-            "Epoch 4/10\n",
-            "\n",
-            " ROC-AUC - epoch: 4 - score: 0.865443\n",
-            "106/106 - 1s - loss: 0.5140 - accuracy: 0.7720 - val_loss: 0.5056 - val_accuracy: 0.7713 - 683ms/epoch - 6ms/step\n",
-            "Epoch 5/10\n",
-            "\n",
-            " ROC-AUC - epoch: 5 - score: 0.936369\n",
-            "106/106 - 1s - loss: 0.3763 - accuracy: 0.8768 - val_loss: 0.3854 - val_accuracy: 0.8475 - 686ms/epoch - 6ms/step\n",
-            "Epoch 6/10\n",
-            "\n",
-            " ROC-AUC - epoch: 6 - score: 0.954976\n",
-            "106/106 - 1s - loss: 0.2500 - accuracy: 0.9279 - val_loss: 0.3100 - val_accuracy: 0.8794 - 728ms/epoch - 7ms/step\n",
-            "Epoch 7/10\n",
-            "\n",
-            " ROC-AUC - epoch: 7 - score: 0.965666\n",
-            "106/106 - 1s - loss: 0.1694 - accuracy: 0.9501 - val_loss: 0.2666 - val_accuracy: 0.8930 - 657ms/epoch - 6ms/step\n",
-            "Epoch 8/10\n",
-            "\n",
-            " ROC-AUC - epoch: 8 - score: 0.972313\n",
-            "106/106 - 1s - loss: 0.1198 - accuracy: 0.9651 - val_loss: 0.2469 - val_accuracy: 0.9043 - 713ms/epoch - 7ms/step\n",
-            "Epoch 9/10\n",
-            "\n",
-            " ROC-AUC - epoch: 9 - score: 0.975482\n",
-            "106/106 - 1s - loss: 0.0868 - accuracy: 0.9756 - val_loss: 0.2302 - val_accuracy: 0.9119 - 667ms/epoch - 6ms/step\n",
-            "Epoch 10/10\n",
-            "\n",
-            " ROC-AUC - epoch: 10 - score: 0.977327\n",
-            "106/106 - 1s - loss: 0.0645 - accuracy: 0.9811 - val_loss: 0.2198 - val_accuracy: 0.9155 - 681ms/epoch - 6ms/step\n",
-            "67/67 [==============================] - 0s 2ms/step - loss: 0.1921 - accuracy: 0.9272\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "y_prob = model1.predict(x_test) \n",
+        "resultados"
+      ],
+      "metadata": {
+        "id": "IyYXjusOASJm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Caso queira deletar uma linha use o código abaixo\n",
+        "# Use a propriedade label para especificar o índice da linha\n",
+        "#resultados = resultados.drop(labels=1, axis=0)\n",
+        "#resultados = resultados.reset_index(drop=True)\n",
+        "#resultados"
+      ],
+      "metadata": {
+        "id": "nP3enYmss2v9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Salva arquivo de saída\n",
+        "resultados.to_csv(PATH_ARQ_SAIDA)"
+      ],
+      "metadata": {
+        "id": "y519ohA8u9jW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# y_prob = model1.predict(x_test) \n",
         "\n",
-        "y_labelpred = y_prob.round()\n",
+        "# y_labelpred = y_prob.round()\n",
         "\n",
-        "y_labeltrue=y_test"
+        "# y_labeltrue=y_test"
       ],
       "metadata": {
         "id": "FR-idj87D4-N"
@@ -785,40 +788,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# Parâmetros\n",
-        "NOME_REDE = REDE_CNN\n",
-        "NOME_BASE = BASE_2\n",
-        "NOME_FUNCAO = FUNCAO_ATV_SIGMOID\n",
-        "NOME_OTIMIZADOR = OTIMIZADOR_1\n",
+        "# # Parâmetros\n",
+        "# NOME_REDE = REDE_CNN\n",
+        "# NOME_BASE = BASE_2\n",
+        "# NOME_FUNCAO = FUNCAO_ATV_SIGMOID\n",
+        "# NOME_OTIMIZADOR = OTIMIZADOR_1\n",
         "\n",
-        "train_resume = json.dumps(pd.read_csv('log.csv',sep=';').to_dict()) \n",
+        "# train_resume = json.dumps(pd.read_csv('log.csv',sep=';').to_dict()) \n",
         "\n",
-        "roc_curve =  json.dumps({\n",
-        "    \"false_positive_rate\": list(ra_val.false_positive_rate),\n",
-        "    \"true_positive_rate\": list(ra_val.true_positive_rate),\n",
-        "    \"score\": ra_val.score\n",
-        "})\n",
+        "# roc_curve =  json.dumps({\n",
+        "#     \"false_positive_rate\": list(ra_val.false_positive_rate),\n",
+        "#     \"true_positive_rate\": list(ra_val.true_positive_rate),\n",
+        "#     \"score\": ra_val.score\n",
+        "# })\n",
         "\n",
-        "confusion = confusion_matrix(y_labeltrue,y_labelpred)\n",
-        "confusion_dict = json.dumps({\n",
-        "    \"00\": int(confusion[0][0]),\n",
-        "    \"01\": int(confusion[0][1]),\n",
-        "    \"10\": int(confusion[1][0]),\n",
-        "    \"11\": int(confusion[1][1])\n",
-        "})\n",
+        "# confusion = confusion_matrix(y_labeltrue,y_labelpred)\n",
+        "# confusion_dict = json.dumps({\n",
+        "#     \"00\": int(confusion[0][0]),\n",
+        "#     \"01\": int(confusion[0][1]),\n",
+        "#     \"10\": int(confusion[1][0]),\n",
+        "#     \"11\": int(confusion[1][1])\n",
+        "# })\n",
         "\n",
-        "# Salvando resultado do modelo\n",
-        "registro_resultado = {resultados.columns[0]: NOME_REDE, \n",
-        "                      resultados.columns[1]: NOME_BASE, \n",
-        "                      resultados.columns[2]: NOME_FUNCAO, \n",
-        "                      resultados.columns[3]: NOME_OTIMIZADOR, \n",
-        "                      resultados.columns[4]: scores[1],\n",
-        "                      resultados.columns[5]: roc_curve,\n",
-        "                      resultados.columns[6]: train_resume,\n",
-        "                      resultados.columns[7]: confusion_dict}\n",
+        "# # Salvando resultado do modelo\n",
+        "# registro_resultado = {resultados.columns[0]: NOME_REDE, \n",
+        "#                       resultados.columns[1]: NOME_BASE, \n",
+        "#                       resultados.columns[2]: NOME_FUNCAO, \n",
+        "#                       resultados.columns[3]: NOME_OTIMIZADOR, \n",
+        "#                       resultados.columns[4]: scores[1],\n",
+        "#                       resultados.columns[5]: roc_curve,\n",
+        "#                       resultados.columns[6]: train_resume,\n",
+        "#                       resultados.columns[7]: confusion_dict}\n",
         "\n",
-        "resultados = resultados.append(registro_resultado, ignore_index=True)\n",
-        "resultados"
+        "# resultados = resultados.append(registro_resultado, ignore_index=True)\n",
+        "# resultados"
       ],
       "metadata": {
         "id": "wjgeZV9tsZVy",
@@ -1035,33 +1038,6 @@
           "execution_count": 67
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Caso queira deletar uma linha use o código abaixo\n",
-        "# Use a propriedade label para especificar o índice da linha\n",
-        "#resultados = resultados.drop(labels=1, axis=0)\n",
-        "#resultados = resultados.reset_index(drop=True)\n",
-        "#resultados"
-      ],
-      "metadata": {
-        "id": "nP3enYmss2v9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Salva arquivo de saída\n",
-        "resultados.to_csv(PATH_ARQ_SAIDA)"
-      ],
-      "metadata": {
-        "id": "y519ohA8u9jW"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
