--- a/Treinamento_CNN.ipynb
+++ b/Treinamento_CNN.ipynb
@@ -90,7 +90,7 @@
         "from keras.layers import Dropout, Conv1D, MaxPooling1D, Flatten, Dense, SpatialDropout1D, BatchNormalization\n",
         "from keras.preprocessing.text import Tokenizer\n",
         "from keras.preprocessing.sequence import pad_sequences\n",
-        "from tensorflow.keras.optimizers import schedules, Adam, Adadelta, SGD, RMSprop, Adagrad, Adamax, Nadam, Ftrl # Estamos usando só o Nadam\n",
+        "from tensorflow.keras.optimizers import Adam, Adadelta, SGD, RMSprop, Adagrad, Adamax, Nadam, Ftrl\n",
         "from keras.models import Sequential\n",
         "from keras.layers.embeddings import Embedding\n",
         "\n",
@@ -176,8 +176,7 @@
         "        if epoch % self.interval == 0:\n",
         "            y_pred = self.model.predict(self.X_val, verbose=0)\n",
         "            self.score = roc_auc_score(self.y_val, y_pred)\n",
-        "            self.false_positive_rate, self.true_positive_rate, _ = roc_curve(self.y_val, y_pred)\n",
-        "            # print(\"\\n ROC-AUC - epoch: {:d} - score: {:.6f}\".format(epoch+1, self.score))             "
+        "            self.false_positive_rate, self.true_positive_rate, _ = roc_curve(self.y_val, y_pred)            "
       ],
       "metadata": {
         "id": "DLBaKxGhrbRU"
@@ -198,7 +197,6 @@
       "cell_type": "code",
       "source": [
         "# CONSTANTES DOS RESULTADOS\n",
-        "\n",
         "REDE = 'CNN'\n",
         "\n",
         "BASE_0 = 'BASE 0'\n",
@@ -547,8 +545,7 @@
         "    keras.layers.Dense(1, activation='sigmoid')\n",
         "    ])\n",
         "  \n",
-        "  return modelo \n",
-        "  "
+        "  return modelo "
       ],
       "metadata": {
         "id": "wKH2mHM5r8_6"
@@ -588,18 +585,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# history, model1, x_test, y_test, ra_val, scores, csv_logger = train_model(input_data, output_label, EMBEDDING_DIMENSION, 32, 5, 0.2, 0.001, 'Nadam', 0.2)\n",
-        "# print(scores)"
-      ],
-      "metadata": {
-        "id": "tMMKN1PS6L33"
-      },
-      "execution_count": 37,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# plot dos gráficos\n",
         "for BS in BATCH_SIZE:\n",
         "  for LR in LEARN_RATE:\n",
@@ -621,7 +606,7 @@
         "        VAL_LOSS = scores[0] \n",
         "        LEARNING_RATE = LR\n",
         "        DROPOUT_RATE = DO\n",
-        "        BATCH_SIZE = BS\n",
+        "        BATCH = BS\n",
         "        ROC_CURVE = json.dumps({\n",
         "            \"false_positive_rate\": list(ra_val.false_positive_rate),\n",
         "            \"true_positive_rate\": list(ra_val.true_positive_rate),\n",
@@ -644,7 +629,7 @@
         "                              resultados.columns[4]: VAL_LOSS,\n",
         "                              resultados.columns[5]: LEARNING_RATE,\n",
         "                              resultados.columns[6]: DROPOUT_RATE,\n",
-        "                              resultados.columns[7]: BATCH_SIZE,\n",
+        "                              resultados.columns[7]: BATCH,\n",
         "                              resultados.columns[8]: ROC_CURVE,\n",
         "                              resultados.columns[9]: TRAIN_RESUME,\n",
         "                              resultados.columns[10]: CONFUSION_MATRIX\n",
