--- a/RotinaDeClassificacaoDaBaseDeDados.ipynb
+++ b/RotinaDeClassificacaoDaBaseDeDados.ipynb
@@ -32,7 +32,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "48rHmBtajC8X",
-        "outputId": "37107da7-9242-4a70-d576-b3b4c05a45aa",
+        "outputId": "fa89ff0c-a66f-45ce-8e60-af6fd612d2a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -123,12 +123,15 @@
         "import pandas as pd\n",
         "from nltk.tokenize import RegexpTokenizer\n",
         "import re\n",
-        "import itertools"
+        "import itertools\n",
+        "import sklearn\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import math"
       ],
       "metadata": {
         "id": "ZsV_6r2Rjh7w"
       },
-      "execution_count": 2,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -160,7 +163,7 @@
       "metadata": {
         "id": "EahfFd6Qj3hK"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +182,7 @@
           "height": 206
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +343,7 @@
           "height": 206
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +500,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +526,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +564,7 @@
           "height": 206
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +724,7 @@
         "id": "kvlph54F8Kr_",
         "outputId": "56f3e6d9-b433-4d8e-f86c-d965e7c938cc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -914,7 +917,7 @@
       "metadata": {
         "id": "dBRY1lHdZ3-U"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -933,7 +936,7 @@
           "height": 206
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1100,7 +1103,7 @@
           "height": 206
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1267,7 +1270,7 @@
         "id": "Tvu_gna84OKm",
         "outputId": "24ca9ba6-4d91-46d7-dd64-8e5c1778f545"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1447,7 +1450,7 @@
           "height": 206
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,7 +1629,7 @@
       "metadata": {
         "id": "tiOhFx0rZ9_J"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1642,7 +1645,7 @@
           "height": 424
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1847,7 +1850,7 @@
       "metadata": {
         "id": "hsa1OFp4DYUR"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1863,7 +1866,7 @@
         "id": "Gz3eCfyHNgoN",
         "outputId": "987f23dd-a0f3-400c-8cb3-42f0839f5047"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2064,7 +2067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "uMzd9gmZYY0Z"
       },
@@ -2109,7 +2112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "aiuYPDsqbeqQ",
         "outputId": "8c7895a9-7497-4d2e-9a8e-ff20e564b4dc",
@@ -2258,7 +2261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "aPgAzmA4WwyS",
         "outputId": "7363090c-aedc-439c-86ff-8269cc3f5412",
@@ -2296,7 +2299,7 @@
           "height": 424
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2488,7 +2491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "k2exHJsoYekL",
         "outputId": "1a3f7253-59c9-42ae-e197-d4fe547f6640",
@@ -2526,12 +2529,12 @@
       "metadata": {
         "id": "v7U-59d_Kppj"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "1DKJnw1abd79",
         "outputId": "ae3ad6ea-877f-4b96-f3c1-1f1936c8a6d2",
@@ -2687,7 +2690,7 @@
       "metadata": {
         "id": "nktvGWEUDsAU"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2701,7 +2704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "uKRb93sk1OZG",
         "outputId": "bca69813-a833-4cb9-e834-c55f541a08f0",
@@ -2850,7 +2853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "xkbdIrUV1OZI",
         "outputId": "f4194376-9e90-4ff8-ffb8-d5011e32f417",
@@ -2888,7 +2891,7 @@
           "height": 424
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3080,7 +3083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "jHg4CZtt1OZN",
         "outputId": "6115eb48-0ed9-4fca-c083-e9168d616277",
@@ -3118,12 +3121,12 @@
       "metadata": {
         "id": "uXyM6IA21OZO"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "nDwc0JVm1OZP",
         "outputId": "a209c3cc-6927-4141-fb19-dffbf243e7bf",
@@ -3278,7 +3281,387 @@
       "metadata": {
         "id": "7tBQguVR8p_o"
       },
-      "execution_count": 33,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Divisão manual da base em treino(60%), teste(20%) e validação(20%)"
+      ],
+      "metadata": {
+        "id": "j18qul3kMuPz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Base1 Com StopWords\n",
+        "PATH_BASE1_JUNTO_COM_DA_LEILA_BALANCEADA = \"/content/drive/MyDrive/TCC/dados/processadas/balanceadas/Base1JuntaHateENotHateDaLeila_balanceada.csv\"\n",
+        "\n",
+        "# Base2 Sem StopWords\n",
+        "PATH_BASE2_LEILA_LIMPISSIMA_BALANCEADA = \"/content/drive/MyDrive/TCC/dados/processadas/balanceadas/Base2_maior4_menor25_limpissima_balanceada.csv\""
+      ],
+      "metadata": {
+        "id": "CRRToRiMNEon"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tweets_base0 = pd.read_csv(PATH_BASE1_JUNTO_COM_DA_LEILA_BALANCEADA, index_col=0)\n",
+        "print(tweets_base0.shape)\n",
+        "tweets_base1 = pd.read_csv(PATH_BASE1_JUNTO_COM_DA_LEILA_BALANCEADA, index_col=0)\n",
+        "print(tweets_base1.shape)\n",
+        "tweets_base2 = pd.read_csv(PATH_BASE2_LEILA_LIMPISSIMA_BALANCEADA, index_col=0)\n",
+        "print(tweets_base2.shape)\n",
+        "bases = [tweets_base0, tweets_base1, tweets_base2]"
+      ],
+      "metadata": {
+        "id": "RXndLzw6NRkf",
+        "outputId": "3ba9bb21-7774-4f02-dedd-334ecc45f88b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(16036, 2)\n",
+            "(16036, 2)\n",
+            "(4886, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_test_size = []\n",
+        "list_train_size = [] # Só para verificação, não é usado posteriormente\n",
+        "input_datas = []\n",
+        "output_labels = []\n",
+        "for base in bases:\n",
+        "  test_size = base.shape[0]/5\n",
+        "  test_size = int(math.ceil(test_size))\n",
+        "  train_size = base.shape[0] - (test_size*2)\n",
+        "  list_test_size.append(test_size)\n",
+        "  list_train_size.append(train_size)\n",
+        "\n",
+        "  input_datas.append(base['text'])\n",
+        "  output_labels.append(base['label'])\n",
+        "\n",
+        "print('list_test_size: '+str(list_test_size))\n",
+        "print('list_train_size: '+str(list_train_size))"
+      ],
+      "metadata": {
+        "id": "c6CNnSONWt21",
+        "outputId": "fa7a3f15-fd84-4891-ebb0-6b397098dd8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "list_test_size: [3208, 3208, 978]\n",
+            "list_train_size: [9620, 9620, 2930]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_x_train = []\n",
+        "list_y_train = []\n",
+        "list_x_test = []\n",
+        "list_y_test = []\n",
+        "list_x_val = []\n",
+        "list_y_val = []\n",
+        "for i in range(3):\n",
+        "  x_main, x_test, y_main, y_test = train_test_split(input_datas[i], output_labels[i], test_size=list_test_size[i], stratify=output_labels[i], random_state=42)\n",
+        "\n",
+        "  x_train, x_val, y_train, y_val = train_test_split(x_main, y_main, test_size=list_test_size[i], stratify=y_main, random_state=42)\n",
+        "\n",
+        "  list_x_train.append(x_train)\n",
+        "  list_y_train.append(y_train)\n",
+        "  list_x_test.append(x_test)\n",
+        "  list_y_test.append(y_test)\n",
+        "  list_x_val.append(x_val)\n",
+        "  list_y_val.append(y_val)"
+      ],
+      "metadata": {
+        "id": "UbxE9QtsN_pT"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_x_train[1]"
+      ],
+      "metadata": {
+        "id": "Ojv6GMkHRdLe",
+        "outputId": "ff194648-f8ba-46c2-a130-cc6711085ebe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8635     me afastei de tanta gente e agora estou sozinh...\n",
+              "14844    mais informações com o fórum da capital pelo t...\n",
+              "9156     ahyramferreira calubarros é bem por essa linha...\n",
+              "6827     ele nunca ele não bolsobosta eleiçõesrbs208 br...\n",
+              "4333                            ir para escola odeio issoo\n",
+              "                               ...                        \n",
+              "5069     o excesso de botox afetou o cérebro desse mari...\n",
+              "7208     acabou a piranhagem pt muda brasil partido dos...\n",
+              "7075     tchau querido   partido dos trabalhadores nunc...\n",
+              "5366     flamengo está movendo a economia do rio e do p...\n",
+              "14                                    troca vivo é um lixo\n",
+              "Name: text, Length: 9620, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_y_train[1]"
+      ],
+      "metadata": {
+        "id": "tT5-tWhkRfRa",
+        "outputId": "2cf3e56b-c5b0-4843-88f0-4886ae376098",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8635     0\n",
+              "14844    0\n",
+              "9156     0\n",
+              "6827     1\n",
+              "4333     1\n",
+              "        ..\n",
+              "5069     1\n",
+              "7208     1\n",
+              "7075     1\n",
+              "5366     1\n",
+              "14       1\n",
+              "Name: label, Length: 9620, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_x_test[1]"
+      ],
+      "metadata": {
+        "id": "NdvQRwxvRq-w",
+        "outputId": "9306dca6-f059-47ab-94e2-d56dc61afea7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9513     minha mãe chorando lendo o texto e vendo o con...\n",
+              "4551     só me resta comprender o quanto você e tiriric...\n",
+              "14394    trujio a bolsa tem esse lado biion que é detes...\n",
+              "3483                             odeio que me acordem vtnc\n",
+              "6009     bom desse calor é que não sinto fome mas em co...\n",
+              "                               ...                        \n",
+              "13648    o menino fã do bandaracanegra agora canta sert...\n",
+              "5158     minha mãe falou para vizinha que já está esper...\n",
+              "8437     vendi meu celular e ainda não arrumei um empre...\n",
+              "12672                emanuelydeborah eu vou voltar domingo\n",
+              "561      será que não cabe um largo processo ou até mes...\n",
+              "Name: text, Length: 3208, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_y_test[1]"
+      ],
+      "metadata": {
+        "id": "2g0xIY-HRtSr",
+        "outputId": "8d11577d-32d2-44e6-e3f5-75123fcd9dde",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9513     0\n",
+              "4551     1\n",
+              "14394    0\n",
+              "3483     1\n",
+              "6009     1\n",
+              "        ..\n",
+              "13648    0\n",
+              "5158     1\n",
+              "8437     0\n",
+              "12672    0\n",
+              "561      1\n",
+              "Name: label, Length: 3208, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_x_val[1]"
+      ],
+      "metadata": {
+        "id": "iUKWDLPKbfsR",
+        "outputId": "5ab53e16-50a3-4fe0-f047-8af6cd4d8ee0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2316                   eu odeio cheiro de cigarro na moral\n",
+              "7678     taiu nessa campanha quanto mais eles se mexem ...\n",
+              "13853               samos ou não samos um raiscul miusical\n",
+              "5251     a joice se apropriou do discurso da esquerdalh...\n",
+              "12041                    vou sair daqui preta de tanto sol\n",
+              "                               ...                        \n",
+              "177      deveria ter uma forma de suspender o sinal das...\n",
+              "15140       parei vai que agora eu goste da denise não sei\n",
+              "2416     tesão de manhã todo mundo sente difícil é sent...\n",
+              "11767                                tudo errado para mim \n",
+              "306       lixo jornalística mídia esquerdopata descartável\n",
+              "Name: text, Length: 3208, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_y_val[1]"
+      ],
+      "metadata": {
+        "id": "9BDN_xhGbhKL",
+        "outputId": "cb6a81b2-ec04-4484-bad3-4f0846aefa7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2316     1\n",
+              "7678     1\n",
+              "13853    0\n",
+              "5251     1\n",
+              "12041    0\n",
+              "        ..\n",
+              "177      1\n",
+              "15140    0\n",
+              "2416     1\n",
+              "11767    0\n",
+              "306      1\n",
+              "Name: label, Length: 3208, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(list_y_val[1])"
+      ],
+      "metadata": {
+        "id": "2tXSz0IKb0i1",
+        "outputId": "b61640ca-1c1d-4ed6-f7a8-38fac1901590",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.series.Series"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Spqz7rkncZO8"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
